# multi-agent-hiring

./: .gitignore  LICENSE  README.md  pyproject.toml
hiring_agents/: __main__.py  agent.py  analysis.py  borderline_fixtures.py  evaluate.py  fixtures.py  llm.py  models.py  monitoring_evidence.py  state.py
hiring_agents/sub_agents/: classifier.py  summariser.py
notebooks/: experiment.ipynb  experiment_2a-pro.ipynb  experiment_2b.ipynb  experiment_3.ipynb  experiment_4.py  experiment_5.py  experiment_5_coding.py  experiment_5_results.json  experiment_6_recruitment.py  experiment_6_results.json  experiment_6b_recruitment.py  experiment_6b_results.json  experiment_7_claude.py  experiment_7_opus_full.py  experiment_7_opus_full_results.json  experiment_7_pull_hypotheses.py  experiment_7_results.json  experiment_7_sonnet_results.json  playground.ipynb  tinmen_sustainability.py
tests/: test_llm_integration.py  test_screening.py
