[project]
name = "multi-agent-hiring"
version = "0.1.0"
description = "Multi-agent hiring system demonstrating principal-agent alignment in AI"
authors = [{name = "Steve Phelps"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgspec>=0.18",
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
notebook = [
    "jupyter>=1.0",
    "pandas>=2.0",
    "ipykernel>=6.0",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://sphelps.substack.com"
Repository = "https://github.com/phelps-sg/multi-agent-hiring"

[tool.hatch.build.targets.wheel]
packages = ["hiring_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
